# archive-and-release

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-release.yml  lint-and-test .yml  lintAndTest .yml  main.yml
releaser/: clean.txt  constants.py  release.py
releaser/utilities/: errors_util.py  file_util.py  git_util.py  github_util.py  time_util.py  zip_util.py
tests/autotests/: test_release.py
tests/autotests/utilities/: test_errors_util.py  test_file_util.py  test_git_util.py  test_git_utils_old.py  test_github_util.py  test_helpers.py  test_log_util.py  test_time_util.py  test_zip_util.py
