[metadata]
name = release-builder
version = 0.9.2
description = "A command-line tool that clones a repository, initializes any submodules, cleans it (usually including .git directories), and archives (zips) it up ready to be added to a target server. Useful then repository is a bunch of scripts (e.g. bash scripts), not an application."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EbaseServices/cloud-release-builder
author = Dan East


[options]
packages = find:
python_requires = >=3.10
install_requires =
    GitPython
    PyGithub
    python-dotenv

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    releaser = releaser.release:main

[options.extras_require]
test =
    pytest
